# covid-diary

./: .editorconfig  .gitignore  3rdpartylicenses.txt  404.html  README.md  docker-compose.yml  index.html  main-es2015.1347188252f7a9553f55.js  main-es2015.1d6d67012b13f217264c.js  main-es2015.22d49eac6d07d9313654.js  main-es2015.52e265cd9fc5080b6f04.js  main-es2015.7d664a79f6fa60664e2c.js  main-es2015.d32b8b9a868649afc289.js  main-es2015.e3f126c8050118128351.js  main-es2015.ef1bc0d7ae460dfb9907.js  main-es5.1347188252f7a9553f55.js  main-es5.1d6d67012b13f217264c.js  main-es5.22d49eac6d07d9313654.js  main-es5.52e265cd9fc5080b6f04.js  main-es5.7d664a79f6fa60664e2c.js  main-es5.d32b8b9a868649afc289.js  main-es5.e3f126c8050118128351.js  main-es5.ef1bc0d7ae460dfb9907.js  manage.py  manifest.webmanifest  ngsw.json  pyproject.toml
backend/: pyproject.toml
backend/coviddiary/: settings.py  urls.py  wsgi.py
backend/diarybase/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/diarybase/migrations/: 0001_initial.py
backend/diarybase/templates/diarybase/: overview.html
coviddiary/: asgi.py  urls.py
frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend/e2e/src/: app.e2e-spec.ts
frontend/src/: index.html  manifest.webmanifest
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  report.ts  reports.service.ts  symptoms.ts
frontend/src/app/report-form/: report-form.component.html  report-form.component.scss  report-form.component.ts
(+6 files in other folders)
